# CPFs

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
hardware experiments/: ibm_implementation_ising_2sites_10steps_1e5shots_0.1pparam_10ticks.csv  ibm_implementation_ising_2sites_10steps_1e5shots_0.1pparam_20ticks.csv  ibm_noiseless_simulation_ising_2sites_1step_1e6shots_0.1pparam_20ticks.csv  ibm_noiseless_simulation_ising_4sites_1step_1e6shots_0.1pparam_20ticks.csv  ibm_noisy_simulation_ising_2sites_10steps_1e5shots_0.1pparam_20ticks.csv  ibmq_hardware_implementation_2site_Ising_0.1pparam_10steps_10ticks_1e5shots.csv  ibmq_hardware_implementation_2site_Ising_0.1pparam_10steps_20ticks_1e5shots.csv  ibmq_noiseless_simulation_2site_Ising_0.1pparam_1step_20ticks_1e6shots.csv  ibmq_noiseless_simulation_4site_Ising_0.1pparam_1step_20ticks_1e6shots.csv  ibmq_noisy_simulation_2site_Ising_0.1pparam_10steps_20ticks_1e5shots.csv
notebooks/: Numerical simulations.ipynb  depth comparison.ipynb  hardware experiments.ipynb  numerics for CPFs with compilations.ipynb  numerics for CPFs without compilations.ipynb  plots for hardware experiments.ipynb
src/: CPFs_and_compilations_qcircs.py  PFs.py  PFs_qcircs.py  __init__.py  average_infidelity_qcircs.py  compilations.py  corrector.py  helpers.py  hubbard_model.py  ising_model_qcircs.py  primitive_qcircs.py
src/circuits/: __init__.py  average_infidelity_qcircs.py  cpfs_qcircs.py  ising_model_qcircs.py  pfs_qcircs.py
src/cpfs/: __init__.py  utils.py
src/evolution/: __init__.py  compilations.py  pfs.py  (+3 more)
(+68 files in other folders)
